--- a/practice/data-cleaning.ipynb
+++ b/practice/data-cleaning.ipynb
@@ -1326,9 +1326,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ax' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/glen/Desktop/alu-code/Machine-Learning/practice/data-cleaning.ipynb Cell 35\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/glen/Desktop/alu-code/Machine-Learning/practice/data-cleaning.ipynb#X46sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m ax\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ax' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"no code is\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
