--- a/practice/data-cleaning.ipynb
+++ b/practice/data-cleaning.ipynb
@@ -1326,23 +1326,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ax' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/glen/Desktop/alu-code/Machine-Learning/practice/data-cleaning.ipynb Cell 35\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/glen/Desktop/alu-code/Machine-Learning/practice/data-cleaning.ipynb#X46sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m ax\u001b[39m.\u001b[39mhead()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ax' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no code is dead\n"
      ]
     }
    ],
    "source": [
-    "print(\"no code is\")"
+    "print(\"no code is dead\")"
    ]
   },
   {
